force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type__c</fullName>
    <description>Displays the record type name.
For PAP-locked, just display a UI friendly &apos;Patient Assistance Program&apos;.</description>
    <formula>CASE(
    RecordType.DeveloperName,
    &apos;PJN_Patient_Assistance_Program_Locked&apos; , &apos;Patient Assistance Program&apos;, 
    RecordType.Name)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>