force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Social_Security_Number__c</fullName>
    <description>Social Security Number value sent to the Financial Clearing House for a PAP Eligibility Request</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Social Security Number value sent to the Financial Clearing House for a PAP Eligibility Request</inlineHelpText>
    <label>Social Security Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>