force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_State__c</fullName>
    <description>State value sent to the Financial Clearing House for a PAP Eligibility Request</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>State value sent to the Financial Clearing House for a PAP Eligibility Request</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>