force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Zip__c.field-meta.xml
<CustomField>
    <fullName>PJN_Zip__c</fullName>
    <description>Zip/Postal Code value sent to the Financial Clearing House for a PAP Eligibility Request</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Zip/Postal Code value sent to the Financial Clearing House for a PAP Eligibility Request</inlineHelpText>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>