force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/Validated_Annual_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Validated_Annual_Household_Income__c</fullName>
    <label>Validated Annual Household Income</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>