force-app/main/default/src/objects/PJN_Assistance_Program__c/recordTypes/MVN_Clinical_Trial_Transition_Program.recordType-meta.xml
<RecordType>
    <fullName>MVN_Clinical_Trial_Transition_Program</fullName>
    <active>true</active>
    <description>An enrollment into the Clinical Trial Transition Program.</description>
    <label>Clinical Trial Transition Program</label>
</RecordType>