force-app/main/default/src/objects/PJN_Assistance_Program__c/recordTypes/MVN_Interim_Access_Program.recordType-meta.xml
<RecordType>
    <fullName>MVN_Interim_Access_Program</fullName>
    <active>true</active>
    <description>An enrollment into the Interim Access Program.</description>
    <label>Interim Access Program</label>
</RecordType>