force-app/main/default/src/objects/PJN_Assistance_Program__c/recordTypes/PJN_Bridge.recordType-meta.xml
<RecordType>
    <fullName>PJN_Bridge</fullName>
    <active>false</active>
    <description>An enrollment into the Bridge assistance program.</description>
    <label>Bridge</label>
</RecordType>