force-app/main/default/src/objects/PJN_Assistance_Program__c/recordTypes/PJN_Copay.recordType-meta.xml
<RecordType>
    <fullName>PJN_Copay</fullName>
    <active>true</active>
    <description>An enrollment into Copay savings program.</description>
    <label>Copay Savings</label>
</RecordType>