force-app/main/default/src/objects/PJN_Assistance_Program__c/recordTypes/PJN_Patient_Assistance_Program.recordType-meta.xml
<RecordType>
    <fullName>PJN_Patient_Assistance_Program</fullName>
    <active>true</active>
    <description>An enrollment into the Patient Assistance Program.</description>
    <label>Patient Assistance Program</label>
</RecordType>