force-app/main/default/src/objects/PJN_Assistance_Program__c/recordTypes/PJN_Patient_Assistance_Program_Locked.recordType-meta.xml
<RecordType>
    <fullName>PJN_Patient_Assistance_Program_Locked</fullName>
    <active>true</active>
    <description>A Patient Assistance Program record with a read-only page layout.</description>
    <label>Patient Assistance Program Locked</label>
</RecordType>