force-app/main/default/src/objects/PJN_Assistance_Program__c/recordTypes/PJN_Quick_Start.recordType-meta.xml
<RecordType>
    <fullName>PJN_Quick_Start</fullName>
    <active>false</active>
    <description>An enrollment into the Quick Start assistance program.</description>
    <label>Quick Start</label>
</RecordType>