force-app/main/default/src/objects/PJN_Assistance_Program__c/validationRules/Effective_Date_before_Expiration_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date_before_Expiration_Date</fullName>
    <active>true</active>
    <description>Ensure the Expiration Date is not before the Effective Date.</description>
    <errorConditionFormula>PJN_Expiration_Date__c &lt; PJN_Effective_Date__c</errorConditionFormula>
    <errorDisplayField>PJN_Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration Date cannot be before the Effective Date.</errorMessage>
</ValidationRule>