force-app/main/default/src/objects/PJN_Assistance_Program__c/validationRules/Effective_Expiration_Date_If_Eligible.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Expiration_Date_If_Eligible</fullName>
    <active>false</active>
    <description>Ensure the Effective Date and Expiration Dates are set if the Assistance Program Outcome is set the &apos;Eligible&apos;.</description>
    <errorConditionFormula>AND(
    ISPICKVAL( PJN_Outcome__c , &apos;Eligible&apos;),
    OR(
        ISBLANK( PJN_Effective_Date__c ),
        ISBLANK( PJN_Expiration_Date__c )
    )
)</errorConditionFormula>
    <errorDisplayField>PJN_Outcome__c</errorDisplayField>
    <errorMessage>Must set the Effective Date and Expiration Date when setting the Outcome to Eligible.</errorMessage>
</ValidationRule>