force-app/main/default/src/objects/PJN_Assistance_Program__c/validationRules/Must_Select_Eligibility_Type_if_Eligible.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Select_Eligibility_Type_if_Eligible</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PJN_Outcome__c, &apos;Eligible&apos;) &amp;&amp; 
ISPICKVAL(MVN_Eligibility_Type__c, &apos;&apos;) &amp;&amp;
(RecordType.DeveloperName  = &apos;PJN_Patient_Assistance_Program&apos; ||
 RecordType.DeveloperName  = &apos;MVN_Interim_Access_Program&apos; ||
 RecordType.DeveloperName  = &apos;MVN_Clinical_Trial_Transition_Program&apos;) &amp;&amp;
 $Profile.Name &lt;&gt;  &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>MVN_Eligibility_Type__c</errorDisplayField>
    <errorMessage>Eligibility Type must be selected to change outcome to eligible</errorMessage>
</ValidationRule>